[gd_scene load_steps=6 format=3 uid="uid://bd2smvw3rd8yx"]

[ext_resource type="Texture2D" uid="uid://cdg2dc66qj6o8" path="res://all art/PixelOffice/PixelOfficeAssets.png" id="1_aeph8"]
[ext_resource type="Script" path="res://speed_upgrade_shop_item.gd" id="1_rbcq1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5j1qy"]
radius = 118.004

[sub_resource type="AtlasTexture" id="AtlasTexture_64fmj"]
atlas = ExtResource("1_aeph8")
region = Rect2(159, 91, 7, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_3x5so"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64fmj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="SpeedShopItem" type="Node2D"]
script = ExtResource("1_rbcq1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5j1qy")

[node name="Button" type="Button" parent="."]
visible = false
offset_left = -33.0
offset_top = -84.0
offset_right = 29.0
offset_bottom = -50.0
theme_override_font_sizes/font_size = 18
text = "Buy"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(7.91999, 7.91999)
sprite_frames = SubResource("SpriteFrames_3x5so")

[node name="useLabel" type="Label" parent="."]
offset_left = -46.0
offset_top = 79.0
offset_right = 42.0
offset_bottom = 102.0
text = "Uses Left"
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="."]
offset_left = -47.0
offset_top = 59.0
offset_right = 41.0
offset_bottom = 82.0
text = "Cost: "
horizontal_alignment = 1

[node name="ItemLabel" type="Label" parent="."]
offset_left = -60.0
offset_top = 29.0
offset_right = 52.0
offset_bottom = 52.0
text = "Speed Upgrade"
horizontal_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
